# NLPipe

./: README.md  pyproject.toml
src/: data_loading.py  evaluation.py  model_config.py  pipeline.py  prediction.py  preprocess.py  utils.py
tests/: config.yaml  main.py
tests/assets/: abstractive_summarization.csv
